Expand README with NMT categories, caching, error handling, and Docker details
Embed the important technical details from docs/ into the README so the
design documentation lives alongside the user-facing documentation.